@@ -37,6 +37,7 @@ return array(
         // =======接口路由============API路径统一小写URL，此处也用小写
         'api/list' => 'api/list/index/scode',
         'api/content' => 'api/content/index/id',
+        'api/about' => 'api/about/index/scode',
         'api/search' => 'api/search/index'
     
     )
