@@ -1,10 +1,10 @@
 <?php
 return array(
     // 应用版本
-    'app_version' => '1.2.2',
+    'app_version' => '1.2.3',
     
     // 发布时间
-    'release_time' => '20181012'
+    'release_time' => '20181016'
 
 );
  
