@@ -4,6 +4,9 @@
 版权所有：hnaoyun.com
 ##########################################
 
+PbootCMS V1.2.3 build 2018-10-16
+1、新增通过scode来调用单篇的接口；
+
 PbootCMS V1.2.2 build 2018-10-12
 1、修复自定义表单多选类型提交数据错误问题；
 2、修复发送邮件设置完成不立即生效问题；
